[package]
name = "FlowForge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_extras = "0.26.2"
petgraph = "0.6" # Add petgraph dependency
uuid = { version = "1", features = ["v4", "fast-rng"] }
image = "0.24"
