[package]
name = "FlowForge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
serde_json = "1.0"
