[package]
name = "FlowForge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_winit = "0.26.2"
egui-wgpu = "0.26.2"
rfd = "0.6.0"
petgraph = "0.6"
egui_extras = "0.26.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-web = "0.26.2"